# 26a-emb-aps-2-vaul

./: .gitignore  CLAUDE.md  GUIA_DEBUG_E_TESTE.md  INTEGRACAO_EDGE_IMPULSE.md  README.md
ei-model/model-parameters/: anomaly_metadata.h  model_metadata.h  model_variables.h
ei-model/tflite-model/: tflite_anomaly_1004163_5_compiled.cpp  tflite_anomaly_1004163_5_compiled.h  tflite_learn_1004163_3_compiled.cpp  tflite_learn_1004163_3_compiled.h  tflite_learn_1004163_9_compiled.cpp  tflite_learn_1004163_9_compiled.h  trained_model_ops_define.h
main/: CMakeLists.txt  FreeRTOSConfig.h  gesture.cpp  gesture.h  hc06.h  main.c  pins.h
python/: settings.json  terminal.py
reference/: ei_reference_main.cpp
